force-app/main/default/objects/History_Apply_OrderItem__c/History_Apply_OrderItem__c.object-meta.xml
<CustomObject>
    <label>History Apply OrderItem</label>
    <nameField>
        <displayFormat>HIS-{0000}</displayFormat>
        <label>History Apply OrderItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Apply OrderItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>