force-app/main/default/objects/History_Apply_OrderItem__c/fields/Date_Apply__c.field-meta.xml
<CustomField>
    <fullName>Date_Apply__c</fullName>
    <label>Date Apply</label>
    <type>DateTime</type>
</CustomField>