force-app/main/default/objects/History_Apply_OrderItem__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>History Apply OrderItems</relationshipLabel>
    <relationshipName>History_Apply_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>