force-app/main/default/objects/History_Apply_OrderItem__c/fields/Package_Owner__c.field-meta.xml
<CustomField>
    <fullName>Package_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Owner</label>
    <referenceTo>Package_Owner__c</referenceTo>
    <relationshipLabel>History Apply OrderItems</relationshipLabel>
    <relationshipName>History_Apply_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>